--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "@sentry/node": "^7.64.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
