--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "@sentry/node": "^7.64.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-requests-logger": "^4.0.0",
     "path": "^0.12.7",
-    "youch": "^3.2.3"
+    "youch": "^3.2.3",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "prisma": "^5.3.1"
