--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "dev": "node --watch src/server.js",
     "prod": "pm2-runtime src/server.js"
   },
@@ -16,7 +17,6 @@
     "@sentry/node": "^7.64.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-requests-logger": "^4.0.0",
@@ -24,6 +24,9 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "prisma": "^5.3.1"
+    "@vitest/coverage-v8": "^0.34.5",
+    "prisma": "^5.3.1",
+    "vitest": "^0.34.5",
+    "vitest-mock-extended": "^1.2.1"
   }
 }
