--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "vitest run",
-    "test:coverage": "vitest run --coverage",
+    "test": "vitest run --no-threads",
+    "test:coverage": "vitest run --no-threads --coverage",
     "dev": "node --watch src/server.js",
     "prod": "pm2-runtime src/server.js"
   },
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-requests-logger": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "zod": "^3.22.2"
   },
